--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   ],
   "version": "0.4.1",
   "repository": "git://github.com/freeall/single-line-log.git",
+  "license": "MIT",
   "author": "Tobias Baunbæk <freeall@gmail.com>"
 }
