--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cli",
     "shell"
   ],
+  "type": "module",
   "version": "1.1.2",
   "repository": "git://github.com/freeall/single-line-log.git",
   "license": "MIT",
