--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "shell"
   ],
   "type": "module",
+  "main": "./index.cjs",
+  "module": "./index.js",
+  "exports": {
+    ".": {
+      "require": "./index.cjs",
+      "import": "./index.js"
+    }
+  },
   "version": "1.1.2",
   "repository": "git://github.com/freeall/single-line-log.git",
   "license": "MIT",
